fix show filter on mobile

--- a/frontend/web/less/mobile/topic.less
+++ b/frontend/web/less/mobile/topic.less
@@ -2,7 +2,7 @@
     display: none;
 }
 #show-topic{
-  // background: #08263a;
+    overflow: auto;    
     .header{
         background: #5888ac;
         width: 100%;
@@ -179,7 +179,7 @@
         margin: 65px 0;
         width: 100%;
         &.open{
-            margin: 115px 0 65px;
+            margin: 110px 0 65px;
         }
         .tab{
             display: none; 
